test/fail/missing-semi-prog.rnp
{ 1 }
---
 --> fail/missing-semi-prog.rnp:1:1
  |
1 | { 1 }
  | ^^^^^ Expected void but got number
  |
